💨💸 Checkpoint ./style.css:5235500/44:5235506/8:5235636/227 ./candidates.html:5235500/9001 ./.glitch-assets:5235636/395 ./topics.html:5235636/133 ./index.html:5235506/14

--- a/candidates.html
+++ b/candidates.html
@@ -21,11 +21,11 @@
 <section  class = "person"id = "joeBiden">
 <h2>Joe Biden</h2>
 <p>
-Joe Biden supports the Pathway to Citezenship, and he wants there to be an easy and clear path to <br>citezenship for poeple seeking asylum and Dreamers.
+Joe Biden supports the Pathway to Citizenship, and he wants there to be an easy and clear path to citizenship for people seeking asylum and Dreamers.<br>
 and it is unclear is he wants to abolish or reform ICE.
-He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
-He wants to ban assault weapons, and supports univesal background checks for gun owners. 
-He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
+He opposes a border wall but supports investments in border technology, and promisesto stop <br>the deportation of Veterans.
+He wants to ban assault weapons, and supports universal background checks for gun owners. 
+He supports the plans for <br>free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
 <ul class = "list">Quick Facts:
 <li>Former VP under Obama for 8 years</li>
 <li>Has large support from older voters</li>
@@ -35,10 +35,10 @@ He supports the plans for free public college, and universal Pre-K, and was one 
 <section class = "person" id = "elizabethwarren">
 <h2>Elizabeth Warren</h2>
 <p>
-Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
-She is a big supporter of Universal Education and has introduced a plan to Congress for College Debt Releif, but not a complete wipe-out of debt. Some fellow <br>
-Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaries.<br>
-This tax would be used to fund free or lowcost childcare. </p>
+Elizabeth Warren supports the Pathway to Citizenship, and Citizenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
+She is a big supporter of Universal Education and has introduced a plan to Congress for College Debt Relief, but not a complete wipe-out of debt. Some fellow <br>
+Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaires.<br>
+This tax would be used to fund free or low cost childcare. </p>
 <ul class = "list">Quick Facts:
 <li>Senator from Massachussets for 6 years</li>
 <li>Polling with 6%</li>
@@ -48,11 +48,11 @@ This tax would be used to fund free or lowcost childcare. </p>
 <section class = "person" id = "kamalaHarris">
 <h2 id="kaname">Kamala Harris</h2>
 <p>
-Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship but she is the only candidate that has promised for it to happen through an <br>
-executive order. She says that with DACA she would take away age restrictions, and implant protections that help Dreamers apply for green cards, and Citezenship. <br>
-However these apply to the 2 million Dreamers, not the 11 million undocumented immigrants. She supports the Universal College plan and would implemint tuition-free College <br>
-for anyone whose family makes less than $125,00. She support a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
-of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some adevertising by gun stores.
+Kamala Harris, like all Democratic Candidates, supports the Pathway to Citizenship but she is the only candidate that has promised for it to happen through an <br>
+executive order. She says that with DACA she would take away age restrictions, and implant protections that help Dreamers apply for green cards, and Citizenship. <br>
+However these apply to the 2 million Dreamers, not the 11 million undocumented immigrants. She supports the Universal College plan and would implement tuition-free College <br>
+for anyone whose family makes less than $125,00. She supports a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
+of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some advertising by gun stores.
 </p>
 <ul class = "list">Quick Facts:
 <li>She was the Attorney General of California before becoming a Senator</li>
@@ -63,10 +63,10 @@ of high-capacity magazines, which are guns that can fire 10 or more rounds witho
 <section class = "person" id = "peteBooty">
   <h2> Pete Buttigeg</h2>
 <p>
-Pete Buttigeg, supports the Pathway to Citizenship, and supports a path for Undocummented Immigrants, who work, pay taxes and help grow our economy. He is a memeber of the "Mayors against<br>
+Pete Buttigeg, supports the Pathway to Citizenship, and supports a path for Undocummented Immigrants, who work, pay taxes and help grow our economy. He is a member of the "Mayors against<br>
 Illegal Guns". He supports Universal Background Checks and banning guns in schools. Unlike other candidates he has not spoken on banning assault weapons. He has not spoken in support of <br>
-other candidates debt relif plans, but does agree that college is expensive "for many" and supports the expansion of the Public Service Loan Forgivness program, which relives some college<br>
-debt, in exchange for public service. One of his other strong positions is he is in favor of abololishing the Electoral College. 
+other candidates debt relief plans, but does agree that college is expensive "for many" and supports the expansion of the Public Service Loan Forgiveness program, which relieves some college debt<br>
+debt, in exchange for public service. One of his other strong positions is he is in favor of abolishing the Electoral College. 
 </p>
 <ul class = "list">Quick Facts:
 <li>Mayor of South Bend Indiana since 2012</li>
@@ -78,10 +78,10 @@ polling 0% in some areas.</li>
 <section class = "person" id = "beto">
 <h2>Beto O'Rourke</h2>
 <p>
-Beto O'Rouke, has a strong stance on Immigration and supports the Pathway to Citezenship and the Dreamers Act. He also has spoken out against the border wall, private immigration detention<br>
+Beto O'Rourke, has a strong stance on Immigration and supports the Pathway to Citizenship and the Dreamers Act. He also has spoken out against the border wall, private immigration detention<br>
 centers and the "militarization" of ICE. He has even stated that he is in favor of removing the wall in El Paso, his hometown, stating that it didn't lower crime rates and hasn't benefited<br>
 the area. Beto is also very strong on Gun Control, he was one of the Congressman to sit-in in the House after the 2016 Pulse Nightclub Shooting. He supports the ban of some semi-automatic<br>
-weapons, and supports some magazine size restrictions, and Universal Background Checks. He hasn't spoken on Education, or tution-free College, and Universal Day Care. 
+weapons, and supports some magazine size restrictions, and Universal Background Checks. He hasn't spoken on Education, or tuition-free College, and Universal Day Care. 
 </p>
 <ul class = "list">Quick Facts:
 <li>Former El Paso, Texas Congressman. He ran against Ted Cruz for the Texas Senate Seat, which gained National Attention.</li>
@@ -90,13 +90,13 @@ weapons, and supports some magazine size restrictions, and Universal Background 
 </ul>
 </section>
 <section class = "person" id = "castro">
-<h2>Julian Castro</h2>
+<h2 id="caname">Julian Castro</h2>
 <p>
-Julian Castro, is a more unknow name in the election, but many people think he could pull ahead after the first Democratic Debate. He is a supporter of the Pathway to Citezenship and has<br>
+Julian Castro, is a more unknown name in the election, but many people think he could pull ahead after the first Democratic Debate. He is a supporter of the Pathway to Citizenship and has<br>
 introduced plans for a pathway for illegal immigrants. He has introduced his plan to take away the section of the Immigration and Nationality Act that states that "illegal entry" is a crime.<br>
 Illegal Immigrants could still be deported, but would not be subject to criminal prosecution. He plans to remove the 287(g) agreements, these say that train cops may act as ICE agents and he<br>
 would remove the section of ICE that deals with arrests and deportations and reform the branch. He is a supporter of banning high-capacity magazines and requiring background checks. He has spoken<br>
-out against loopholes in the process that have allowed people such as Dylann Roof to buy guns before their background checks have been processed and cleared. One of his signiture policies is<br>
+out against loopholes in the process that have allowed people such as Dylann Roof to buy guns before their background checks have been processed and cleared. One of his signature policies is<br>
 Universal Pre-K programs around the US. 
 </p>
 <ul class = "list">Quick Facts: 
