--- a/topics.html
+++ b/topics.html
@@ -38,6 +38,7 @@
     Sed nec eros id lectus mollis rutrum a ac sapien. Cras commodo ut enim ac pretium. Donec at ipsum a mauris congue commodo. 
     Donec eu volutpat dolor.
     </p>
+    <img id="control" src=https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fgun%20control.jpg?v=1561670294439>
   </section>
       <section id = "education">
       <h2 id = "eductionT">
