--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
       <section class = "aboutUs">
        <h2 id="aTitle"> About Us! </h2> 
-        <h4>
+        <h4 id = "ourbio">
           We are Madeleine, Misheal, and Ximena. We made this website for our final project at the Dallas WebDev Kode with Klossy Camp. Kode with Klossy is an all girls, 2 week coding camp put on by Karlie Kloss. 
           <img id="scarymisheal"src=https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fabout%20us.jpg?v=1561656313528>
         </h4>
