🛰🐃 Checkpoint ./candidates.html:5235506/386 ./style.css:5235506/208 ./topics.html:5235506/905

--- a/topics.html
+++ b/topics.html
@@ -30,13 +30,7 @@
   <section class="gunControl">
   <h2 id = "guns">Gun Control</h2>
   <p id = "gunpara">
-    Nulla eu mollis lacus. Etiam elementum nisl eros, eu ullamcorper turpis tempor eget. Nulla facilisi. 
-    Nunc elementum rutrum sem vitae hendrerit. Duis sagittis tortor nec lorem volutpat, in congue leo sagittis.
-    Aenean ultrices dui tincidunt lorem tristique rutrum. Sed efficitur rutrum mollis. Duis ac efficitur nulla, 
-    at iaculis ipsum. Sed a libero non risus ullamcorper pellentesque eu sed lorem. Lorem ipsum dolor sit amet, 
-    consectetur adipiscing elit. Vivamus posuere metus eget sollicitudin elementum. Cras ornare at nibh vel laoreet. 
-    Sed nec eros id lectus mollis rutrum a ac sapien. Cras commodo ut enim ac pretium. Donec at ipsum a mauris congue commodo. 
-    Donec eu volutpat dolor.
+In 2019 alone there have been more than 150 mass shootings. 8 of these have occured in schools. People all over the nation are calling for Gun Control 
     </p>
     <img id="control" src=https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fgun%20control.jpg?v=1561670294439>
   </section>
