--- a/candidates.html
+++ b/candidates.html
@@ -19,7 +19,7 @@
 <div class = "bios">
   
 <section  class = "person"id = "joeBiden">
-<h2>Joe Biden</h2>
+<h2 id = "bidenT">Joe Biden</h2>
 <p>
 Joe Biden supports the Pathway to Citizenship, and he wants there to be an easy and clear path to citizenship for people seeking asylum and Dreamers.<br>
 and it is unclear is he wants to abolish or reform ICE.
@@ -27,22 +27,22 @@ He opposes a border wall but supports investments in border technology, and prom
 He wants to ban assault weapons, and supports universal background checks for gun owners. 
 He supports the plans for <br>free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
 <ul class = "list">Quick Facts:
-<li>Former VP under Obama for 8 years</li>
-<li>Has large support from older voters</li>
-<li>Highest poller so far with 28%</li>
+<li>-Former VP under Obama for 8 years</li>
+<li>-Has large support from older voters</li>
+<li>-Highest poller so far with 28%</li>
 </ul>
 </section>
 <section class = "person" id = "elizabethwarren">
-<h2>Elizabeth Warren</h2>
+<h2 id = "warrenT">Elizabeth Warren</h2>
 <p>
 Elizabeth Warren supports the Pathway to Citizenship, and Citizenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
 She is a big supporter of Universal Education and has introduced a plan to Congress for College Debt Relief, but not a complete wipe-out of debt. Some fellow <br>
 Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaires.<br>
 This tax would be used to fund free or low cost childcare. </p>
 <ul class = "list">Quick Facts:
-<li>Senator from Massachussets for 6 years</li>
-<li>Polling with 6%</li>
-<li>Supports legalized Marijuana</li>
+<li>-Senator from Massachussets for 6 years</li>
+<li>-Polling with 6%</li>
+<li>-Supports legalized Marijuana</li>
 </ul>
 </section>
 <section class = "person" id = "kamalaHarris">
@@ -61,7 +61,7 @@ of high-capacity magazines, which are guns that can fire 10 or more rounds witho
 </ul>
 </section>
 <section class = "person" id = "peteBooty">
-  <h2> Pete Buttigeg</h2>
+  <h2 id = "booty"> Pete Buttigeg</h2>
 <p>
 Pete Buttigeg, supports the Pathway to Citizenship, and supports a path for Undocummented Immigrants, who work, pay taxes and help grow our economy. He is a member of the "Mayors against<br>
 Illegal Guns". He supports Universal Background Checks and banning guns in schools. Unlike other candidates he has not spoken on banning assault weapons. He has not spoken in support of <br>
@@ -112,7 +112,7 @@ Universal Pre-K programs around the US.
   <ul class = "list">
     <li>Main Ideas: </li>
     <li><a href = "https://www.rollingstone.com/politics/politics-features/2020-democrat-candidates-771735/">Candidate Information</a> , <a href = "https://www.vox.com/policy-and-politics/2019/3/28/18285455/2020-presidential-election-polls-joe-biden-democratic-primary-candidates">Polling Number</a> , <a href = "https://news.vice.com/en_us/article/9kxv8e/do-any-of-the-2020-democrats-want-to-abolish-ice-we-broke-down-their-immigration-plans
-  ">Immigration Plans</a></li>
+  ">Immigration Plans</a> <a href = "https://en.wikipedia.org/wiki/List_of_mass_shootings_in_the_United_States_in_2019">Gun Control</a></li>
 <li>Candidate Specifices:</li>
   <li><a href = "https://www.pbs.org/newshour/politics/what-does-joe-biden-believe-where-the-candidate-stands-on-8-issues">Joe Biden</a> , <a href = "https://www.politico.com/2020-election/candidates-views-on-the-issues/elizabeth-warren/">Elizabeth Warren</a> , <a href = "https://www.pbs.org/newshour/politics/what-does-kamala-harris-believe-where-the-candidate-stands-on-9-issues">Kamala Harris</a> , <a href = "https://www.elle.com/culture/movies-tv/a27073125/julian-castro-presidential-election-2020-issues/">Julian Castro</a> , <a href = "https://www.axios.com/pete-buttigieg-2020-presidential-election-factsheet-indiana-mayor-020c5afc-c8a2-4691-940c-b271e63306b1.html">Pete Buttigeg</a></li>
     </ul>
