🍕🔑 Checkpoint ./topics.html:5235506/1042

--- a/topics.html
+++ b/topics.html
@@ -30,9 +30,11 @@
   <section class="gunControl">
   <h2 id = "guns">Gun Control</h2>
   <p id = "gunpara">
-In 2019 alone there have been more than 150 mass shootings. 8 of these have occured in schools. People all over the nation are calling for Gun Control 
+In 2019 alone there have been more than 150 mass shootings. 8 of these have occured in schools. People all over the nation are calling for Gun Control in our country. One of the biggest arguments, is the 2nd Amendment, the Right to Bear Arms, many people interpret this as they are allowed to have as many guns as they want. Many candidates and people are calling for
+Universal Background Checks and the ban of semi-automatic and automatic weapons, along with high-capactiy magazines. These are the weapons that have been used in Churches, Schools and Synagouges to commit these shootings. A large misunderstanding is most people believe in Gun Control, and few in a Gun Ban. With Gun Control; you are still allowed to own weaposn of your choice
+and can still legally conseal them. The only difference is control pushes for Universal Background Checks and ban of some very intense weapons. One of the largest issues in the topic is mental 
     </p>
-    <img id="control" src=https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fgun%20control.jpg?v=1561670294439>
+    <img id="control" src="https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fgun%20control.jpg?v=1561670294439">
   </section>
       <section id = "education">
       <h2 id = "eductionT">
