🏖🐉 Checkpoint ./candidates.html:5235500/22:5235506/3725 ./topics.html:5235506/244 ./.glitch-assets:5235636/393

--- a/topics.html
+++ b/topics.html
@@ -41,7 +41,7 @@ and can still legally conseal them. The only difference is control pushes for Un
         Education 
         </h2>
       <p id = "educationPara">
-        
+        We are putting Tax Money into Education, and not getting good enough results. Taxpayers in 2015 spent $649 Billion on Education. Many districts experince budget cuts due to lack of federal funding. 
         </p>
       
       </section>
