--- a/candidates.html
+++ b/candidates.html
@@ -29,9 +29,9 @@ He supports the plans for <br>free public college, and universal Pre-K, and was 
   
 Kamala Harris, like all Democratic Candidates, supports the Pathway to Citizenship but she is the only candidate that has promised for it to happen through an <br>
 executive order. She says that with DACA she would take away age restrictions, and implant protections that help Dreamers apply for green cards, and Citizenship. <br>
-However these apply to the 2 million Dreamers, not the 11 million undocumented immigrants. She supports the Universal College plan and would implement tuition-free College <br>
-for anyone whose family makes less than $125,00. She supports a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
-of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some advertising by gun stores.
+However these apply to the 2 million Dreamers, not the 11 million undocumented immigrants. She supports the Universal College plan and would implement <br>tuition-free College 
+for anyone whose family makes less than $125,00. She supports a universal Pre-K program as well. On the topic of Gun Control she supports <br>banning assault weapons and the sale
+of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the <br>AG of California she supported that block some advertising by gun stores.
 <!-- <ul class = "list">Quick Facts:
 <li>-Former VP under Obama for 8 years</li>
 <li>-Has large support from older voters</li>
@@ -58,13 +58,11 @@ This tax would be used to fund free or low cost childcare. </p>
 </section>
 <section class = "person" id = "kamalaHarris">
 <h2 id="kaname">Joe Biden</h2>
-<!-- <p>
-Kamala Harris, like all Democratic Candidates, supports the Pathway to Citizenship but she is the only candidate that has promised for it to happen through an <br>
-executive order. She says that with DACA she would take away age restrictions, and implant protections that help Dreamers apply for green cards, and Citizenship. <br>
-However these apply to the 2 million Dreamers, not the 11 million undocumented immigrants. She supports the Universal College plan and would implement tuition-free College <br>
-for anyone whose family makes less than $125,00. She supports a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
-of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some advertising by gun stores. -->
-</p>
+<p>Joe Biden supports the Pathway to Citizenship, and he wants there to be an easy and clear path to citizenship for people seeking asylum and Dreamers.<br>
+It is unclear if he wants to abolish or reform ICE.
+He opposes a border wall but supports investments in border technology, and promisesto stop <br>the deportation of Veterans.
+He wants to ban assault weapons, and supports universal background checks for gun owners. 
+He supports the plans for <br>free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
 <!-- <ul class = "list">Quick Facts:
 <li>She was the Attorney General of California before becoming a Senator</li>
 <li>She supports a Green New Deal and legalizing Marijuana</li>
