--- a/topics.html
+++ b/topics.html
@@ -37,13 +37,12 @@ and can still legally conseal them. The only difference is control pushes for Un
     <img id="control" src="https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fgun%20control.jpg?v=1561670294439">
   </section>
       <section id = "education">
-      <h2 id = "eductionT">
-        Education 
-        </h2>
+      <h2 id = "eductionTitle">Education</h2>
       <p id = "educationPara">
-        We are putting Tax Money into Education, and not getting good enough results. Taxpayers in 2015 spent $649 Billion on Education. Many districts experince budget cuts due to lack of federal funding. 
+        We are putting Tax Money into Education, and not getting good enough results. Taxpayers in 2015 spent $649 Billion on Education. Many districts experience budget cuts due to lack of federal funding. State taxes make more of an impact on Education, they provide 91% of funding for education. States on average spend $12,000 per student. One of the biggest polcies among Democrats is
+      having Tuition-Free College and Universal Pre-K. Many countries in Europe, such as Sweden, offer these. Many peoples concerned for.
         </p>
-      
+      <img id="budget" src="https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fbudget%20pic.jpg?v=1561730276769">
       </section>
     </div>
              
