Exporting to user/repo ./style.css:5235500/135:5235506/49:5235636/36 ./topics.html:5235506/136

--- a/topics.html
+++ b/topics.html
@@ -40,7 +40,7 @@ and can still legally conseal them. The only difference is control pushes for Un
       <h2 id = "eductionTitle">Education</h2>
       <p id = "educationPara">
         We are putting Tax Money into Education, and not getting good enough results. Taxpayers in 2015 spent $649 Billion on Education. Many districts experience budget cuts due to lack of federal funding. State taxes make more of an impact on Education, they provide 91% of funding for education. States on average spend $12,000 per student. One of the biggest polcies among Democrats is
-      having Tuition-Free College and Universal Pre-K. Many countries in Europe, such as Sweden, offer these. Many peoples concerned for.
+      having Tuition-Free College and Universal Pre-K. Many countries in Europe, such as Sweden, offer these. Many peoples concerned about this is because of the higher taxes they would have to pay for this, and they are resistant for that. 
         </p>
       <img id="budget" src="https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fbudget%20pic.jpg?v=1561730276769">
       </section>
